website/tests/snapshots/types/casting.exp
=== block 1 ===
No errors!

=== block 2 ===
No errors!

=== block 3 ===
Error ------------------------------------------------------------------------------- -:2:1

Cannot compare number literal `1` [1] to boolean [2], because number literal `1` [1] is not a subtype of boolean [2] and
boolean [2] is not a subtype of number literal `1` [1]. In **rare** cases, these types may have overlapping values but
lack a subtyping relationship. If that happens, you can cast one side to the union of both types to pass the flow check.
 [invalid-compare]

   -:2:1
   2| 1 === 1 as boolean; // Error!
      ^^^^^^^^^^^^^^^^^^

References:
   -:2:1
   2| 1 === 1 as boolean; // Error!
      ^ [1]
   -:2:12
   2| 1 === 1 as boolean; // Error!
                 ^^^^^^^ [2]

Error ------------------------------------------------------------------------------- -:2:7

Cannot cast `1` to boolean because number [1] is incompatible with boolean [2]. [incompatible-type]

   -:2:7
   2| 1 === 1 as boolean; // Error!
            ^ [1]

References:
   -:2:12
   2| 1 === 1 as boolean; // Error!
                 ^^^^^^^ [2]


Found 2 errors

=== block 4 ===
No errors!

=== block 5 ===
Error ------------------------------------------------------------------------------- -:6:1

Cannot cast `value` to string because number [1] is incompatible with string [2]. [incompatible-type]

   -:6:1
   6| value as string; // Error!
      ^^^^^

References:
   -:2:15
   2| const value = 42;
                    ^^ [1]
   -:6:10
   6| value as string; // Error!
               ^^^^^^ [2]


Found 1 error

=== block 6 ===
Error ------------------------------------------------------------------------------- -:9:1

Cannot cast `newValue` to number literal `42` because number [1] is incompatible with number literal `42` [2].
[incompatible-type]

   -:9:1
   9| newValue as 42;     // Error!
      ^^^^^^^^

References:
   -:7:25
   7| let newValue = value as number;
                              ^^^^^^ [1]
   -:9:13
   9| newValue as 42;     // Error!
                  ^^ [2]


Found 1 error

=== block 7 ===
Error ------------------------------------------------------------------------------ -:3:18

Cannot cast `fooObj` to object type because property `bar` is missing in object literal [1] but exists in object
type [2]. [incompatible-type]

   -:3:18
   3| const otherObj = fooObj as {foo: number, bar: string};  // ERROR
                       ^^^^^^

References:
   -:2:16
   2| const fooObj = {foo: 1};
                     ^^^^^^^^ [1]
   -:3:28
   3| const otherObj = fooObj as {foo: number, bar: string};  // ERROR
                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Found 1 error

=== block 8 ===
Error ------------------------------------------------------------------------------- -:5:1

Cannot cast `value` to string because number [1] is incompatible with string [2]. [incompatible-type]

   -:5:1
   5| value as string; // Error!
      ^^^^^

References:
   -:2:13
   2| let value = 42;
                  ^^ [1]
   -:5:10
   5| value as string; // Error!
               ^^^^^^ [2]

Error ------------------------------------------------------------------------------- -:9:1

Cannot cast `newValue` to number because string [1] is incompatible with number [2]. [incompatible-type]

   -:9:1
   9| newValue as number; // Error!
      ^^^^^^^^

References:
   -:7:32
   7| let newValue = value as any as string;
                                     ^^^^^^ [1]
   -:9:13
   9| newValue as number; // Error!
                  ^^^^^^ [2]


Found 2 errors

=== block 9 ===
No errors!

=== block 10 ===
No errors!
